redis sdk remove useless dependency